# H-Sharp

./: .gitattributes  .linguist  Cargo.toml  Makefile  README.adoc  README.md  build.hl  install.hl  install.sh  remove.hl
example/: example.h#  hello-world.h#
example/.hl/: showcase.hl
examples/: hello-world.h#
examples/more/: cli_tool.h#  gui_hello.h#  hello.h#  http_server.h#  json_example.h#  port_scanner.h#  python_interop.h#  scanner.h#  xor_cipher.h#
install-remove/Every-Linux/: install.sh  remove.sh
install-remove/HackerOS/: install-utils.hl  install.hl  remove.hl
libs/std/: std.h#
libs/std/collections/: array.h#  vec.h#
libs/std/core/: mem.h#  types.h#
libs/std/math/: math.h#
libs/std/string/: string.h#
libs/std/sys/: sys.h#
mime/: hacker-lang.xml
source-code/bytes/: Cargo.toml
source-code/bytes/src/: cli.rs  config.rs  doc_gen.rs  fmt_cmd.rs  installer.rs  isolation.rs  jit.rs  lockfile.rs  main.rs  progress.rs  python_interop.rs  registry.rs  test_runner.rs  workspace.rs
source-code/cli/: Cargo.toml  package_manager.rs
source-code/cli/src/: build.rs  check.rs  compile.rs  diagnostics.rs  hl.rs  main.rs  new.rs  preview.rs  runtime.c
source-code/compiler/: Cargo.toml  build.rs
source-code/compiler/runtime/: core.c  regex.c  sqlite.c
source-code/compiler/src/: ast.rs  builtins.rs  builtins_registry.rs  codegen.rs  compiler.rs  cranelift_codegen.rs  derive_codegen.rs  features.rs  ffi.rs  ffi_linker.rs  interpreter.rs  lib.rs  lifetimes.rs  llvm_optimize.rs  llvm_types.rs  main.rs  modules.rs  mono.rs  monomorphize.rs  optimize_ast.rs  regions.rs  runtime.rs  target.rs  traits.rs  typechecker.rs  typeck.rs  types.rs
source-code/compiler/src/core_modules/: mod.rs
source-code/core/: Cargo.toml  main.py
source-code/core/src/: main.rs
source-code/fronted/: Cargo.toml  main.py
source-code/fronted/src/: main.rs
source-code/hk-parser/: Cargo.toml
source-code/hk-parser/src/: lib.rs
source-code/hs-errors/: Cargo.toml
source-code/hs-errors/src/: main.rs
source-code/hsc/: main.odin
source-code/interpreter/: Cargo.toml
source-code/interpreter/src/: lib.rs  runtime_async.rs
source-code/llvm-compiler/: Cargo.toml  build.rs
source-code/llvm-compiler/src/: bin.rs  builtins.rs  codegen.rs  lib.rs  optimize.rs  types.rs
source-code/parser/: Cargo.toml
source-code/parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs
source-code/scripting/: Cargo.toml
source-code/scripting/src/: lib.rs
source-code/std/: Cargo.toml
source-code/std/src/: lib.rs
source-code/std/src/bytes_util/: mod.rs
source-code/std/src/collections/: mod.rs
source-code/std/src/crypto/: bytes.rs  hash.rs  hex.rs  mod.rs
source-code/std/src/encoding/: base64.rs  url.rs
source-code/std/src/env/: mod.rs
source-code/std/src/fmt/: mod.rs
source-code/std/src/fs/: mod.rs
source-code/std/src/gtk/: mod.rs
source-code/std/src/http/: mod.rs
source-code/std/src/io/: file.rs  keyboard.rs  mod.rs  print.rs
source-code/std/src/json/: mod.rs
source-code/std/src/math/: mod.rs
source-code/std/src/net/: http.rs  mod.rs  tcp.rs  udp.rs
source-code/std/src/os/: mod.rs
source-code/std/src/path/: mod.rs
source-code/std/src/process/: mod.rs
source-code/std/src/regex/: mod.rs
source-code/std/src/sec/: mod.rs
source-code/std/src/strings/: mod.rs
source-code/std/src/time/: mod.rs
source-code/std/src/toml_fmt/: mod.rs
source-code/std/src/yaml/: mod.rs
source-code/vira/: Cargo.toml
source-code/vira/src/: cli.rs  config.rs  hcl.rs  installer.rs  main.rs  progress.rs  registry.rs  rust_ffi.rs  settings.rs
source-code/virus/: Virus.hcl  main.hcs
source-code/virus-go/: go.mod  main.go
source-code/virus/src/: main.hcs
std/: archive.h#  async_.h#  audio.h#  buf.h#  cache.h#  channel.h#  cli.h#  collections.h#  color.h#  config.h#  container.h#  conv.h#  cron.h#  crypto.h#  crypto_aes.h#  crypto_rsa.h#  csv.h#  date.h#  db.h#  diff.h#  encoding_base64.h#  encoding_url.h#  env.h#  fmt.h#  fs.h#  graphql.h#  grpc.h#  gtk.h#  hash.h#  hex.h#  hk.h#  http.h#  image.h#  io.h#  io_file.h#  iter.h#  json.h#  jwt.h#  log.h#  math.h#  (+41 more)
tests/compiler/: modules_test.h#  typechecker_test.h#
tests/core/: arithmetic_test.h#  control_flow_test.h#  functions_test.h#  strings_test.h#  types_test.h#
tests/interpreter/: async_test.h#  closures_test.h#  string_interp_test.h#
tests/std/: collections_test.h#  crypto_test.h#  fs_test.h#  json_test.h#  regex_test.h#  sort_iter_test.h#
