[workspace]
members = [
    "source-code/parser",
    "source-code/compiler",
    "source-code/cli",
    "source-code/bytes",
    "source-code/interpreter",
    "source-code/std",
    "source-code/vira",
    "source-code/llvm-compiler",  # Requires: apt install llvm-17-dev libpolly-17-dev libzstd-dev
    # Build with LLVM: LLVM_SYS_170_PREFIX=/usr/lib/llvm-17 cargo build --release -p hsharp-llvm-compiler
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["H# Language Team"]
license = "MIT"

[workspace.dependencies]
# Shared deps
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "color"] }
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
indexmap = "2.0"
