[workspace]
members = [
    "source-code/parser",
    "source-code/compiler",
    "source-code/cli",
    "source-code/bytes",
    "source-code/interpreter",
    "source-code/vira",
    "source-code/llvm-compiler",  # Requires: llvm-21-dev libpolly-21-dev (apt.llvm.org/unstable)
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "BSD-3"

[workspace.dependencies]
# Shared deps
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "color"] }
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
indexmap = "2.0"
