[package]
name = "bytes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bytes"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.79"
thiserror = "=1.0.56"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
clap = { version = "=4.4.18", features = ["derive", "color"] }
colored = "=2.0.4"
indicatif = "=0.17.8"
dirs = "=5.0.1"
