[package]
name = "bytes-pm"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "bytes"
path = "src/main.rs"

[dependencies]
anyhow    = "=1.0.79"
serde     = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
colored   = "=2.0.4"
indicatif = "=0.17.8"
lexopt    = "0.3"
dirs      = "=5.0.1"
toml      = "0.8"
memmap2   = "0.9"
tempfile  = "3.10"
nix       = { version = "=0.26.4", features = ["fs", "mount"] }
