[package]
name    = "bytes"
version = "0.7.0"
edition = "2021"
authors = ["HackerOS Team"]
description = "H# RAM-JIT Package Manager & Multi-language Workspace Builder"

[[bin]]
name = "bytes"
path = "src/main.rs"

[dependencies]
# HK config (crates.io — replaces the removed workspace member)
hk-parser  = "0.3.0"

# UI
colored    = "=2.0.4"
indicatif  = "=0.17.8"

# Serialization
serde      = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
toml       = "=0.8.8"

# CLI parsing
lexopt     = "=0.3.0"

# Filesystem / util
dirs       = "=5.0.1"
walkdir    = "=2.4.0"
tempfile   = "=3.8.1"
sha2       = "=0.10.8"
hex        = "=0.4.3"
anyhow     = "=1.0.79"

# HTTP (minimal — raw TCP for registry, reqwest optional)
reqwest    = { version = "=0.11.23", features = ["blocking", "json"], optional = true }

[features]
default  = []
network  = ["reqwest"]
