[package]
name = "hsharp-cli"
version = "0.8.0"
edition = "2021"

# The h# binary lives HERE, not in compiler/. compiler/ is a pure lib.
# Static link: inkwell/LLVM statically links into this binary via
# hsharp-compiler (which has the inkwell dep).
[[bin]]
name = "hsharp"
path = "src/main.rs"

[dependencies]
anyhow     = "=1.0.79"
thiserror  = "=1.0.56"
serde      = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
clap       = { version = "=4.4.18", features = ["derive", "color"] }
colored    = "=2.0.4"
indicatif  = "=0.17.8"
dirs       = "=5.0.1"
walkdir    = "=2.4.0"
hsharp-parser      = { path = "../parser" }
hsharp-compiler    = { path = "../compiler" }
hsharp-interpreter = { path = "../interpreter" }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
