[package]
name = "hsharp-compiler"
version = "0.2.0"
edition = "2021"

[lib]
name = "hsharp_compiler"
path = "src/lib.rs"

[dependencies]
anyhow = "=1.0.79"
thiserror = "=1.0.56"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
colored = "=2.0.4"
hsharp-parser = { path = "../parser" }

# Cranelift native code generation
cranelift-codegen  = "=0.100.0"
cranelift-frontend = "=0.100.0"
cranelift-module   = "=0.100.0"
cranelift-object   = "=0.100.0"
cranelift-native   = "=0.100.0"

# Object file writing
object = "=0.32.2"
target-lexicon = "0.12"

