[package]
name = "hsharp-compiler"
version = "0.8.0"
edition = "2021"

[lib]
name = "hsharp_compiler"
path = "src/lib.rs"

[dependencies]
anyhow     = "=1.0.79"
thiserror  = "=1.0.56"
serde      = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
colored    = "=2.0.4"
hsharp-parser = { path = "../parser" }

# LLVM 21 backend (merged from the former hsharp-llvm-compiler crate).
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false
