[package]
name = "hsharp-llvm-compiler"
version = "0.2.0"
edition = "2021"

[lib]
name = "hsharp_llvm_compiler"
path = "src/lib.rs"

[[bin]]
name = "hhc"
path = "src/bin.rs"

[dependencies]
anyhow    = "1"
thiserror = "1"
colored   = "2"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
hsharp-parser   = { path = "../parser" }
hsharp-compiler = { path = "../compiler" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
