[package]
name = "hsharp-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hsharp_parser"
path = "src/lib.rs"

[dependencies]
logos.workspace = true
chumsky.workspace = true
ariadne.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
