[package]
name = "hsharp-scripting"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hsharp-parser = { path = "../parser" }
hsharp-compiler = { path = "../compiler" }
thiserror = { workspace = true }
anyhow = { workspace = true }
shlex = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
colored = { workspace = true }
