[package]
name = "vira"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vira"
path = "src/main.rs"

[dependencies]
walkdir  = "=2.4.0"
anyhow     = "=1.0.79"
serde      = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.108"
colored    = "=2.0.4"
indicatif  = "=0.17.8"
lexopt     = "0.3"
dirs       = "=5.0.1"
